include_HEADERS		= xsupconfig.h
lib_LIBRARIES		= libxsupconfig.a
libxsupconfig_a_CFLAGS  = -DEXTERNAL_USE
libxsupconfig_a_SOURCES = pwd_crypt.h xsupconfig_common.h \
			  xsupconfig_defaults.h xsupconfig_devices.h \
			  xsupconfig_parse_conn_association.h \
			  xsupconfig_parse_connection.h \
			  xsupconfig_parse_connections.h \
			  xsupconfig_parse_conn_ip.h \
			  xsupconfig_parse_devices.h \
			  xsupconfig_parse_eap_aka.h \
			  xsupconfig_parse_eap_fast.h \
			  xsupconfig_parse_eap_fast_phase2.h \
			  xsupconfig_parse_eap_gtc.h xsupconfig_parse_eap.h \
			  xsupconfig_parse_eap_md5.h \
			  xsupconfig_parse_eap_mschapv2.h \
			  xsupconfig_parse_eap_otp.h \
			  xsupconfig_parse_eap_peap.h \
			  xsupconfig_parse_eap_peap_phase2.h \
			  xsupconfig_parse_eap_sim.h \
			  xsupconfig_parse_eap_tls.h \
			  xsupconfig_parse_eap_tnc.h \
			  xsupconfig_parse_eap_ttls_chap.h \
			  xsupconfig_parse_eap_ttls.h \
			  xsupconfig_parse_eap_ttls_mschap.h \
			  xsupconfig_parse_eap_ttls_mschapv2.h \
			  xsupconfig_parse_eap_ttls_pap.h \
			  xsupconfig_parse_eap_ttls_phase2.h \
			  xsupconfig_parse_globals.h xsupconfig_parse.h \
			  xsupconfig_parse_interface.h \
			  xsupconfig_parse_leap.h \
			  xsupconfig_parse_plugin.h \
			  xsupconfig_parse_plugins.h \
			  xsupconfig_parse_profile_compliance.h \
			  xsupconfig_parse_profile.h \
			  xsupconfig_parse_profiles.h \
			  xsupconfig_parse_trusted_server.h \
			  xsupconfig_parse_trusted_servers.h \
			  xsupconfig_structs.h xsupconfig_vars.h \
			  \
			  xsupconfig.c xsupconfig_parse.c \
			  xsupconfig_parse_profile.c \
			  xsupconfig_parse_profiles.c\
			  xsupconfig_parse_connections.c \
			  xsupconfig_parse_connection.c \
			  xsupconfig_parse_conn_association.c \
			  xsupconfig_parse_interface.c \
			  xsupconfig_parse_globals.c xsupconfig_common.c \
			  xsupconfig_parse_eap.c \
			  xsupconfig_parse_eap_fast.c \
			  xsupconfig_parse_eap_fast_phase2.c \
			  xsupconfig_parse_eap_tls.c \
			  xsupconfig_parse_eap_md5.c \
			  xsupconfig_parse_leap.c \
			  xsupconfig_parse_eap_mschapv2.c \
			  xsupconfig_parse_eap_sim.c \
			  xsupconfig_parse_eap_aka.c \
			  xsupconfig_parse_eap_gtc.c \
			  xsupconfig_parse_eap_otp.c \
			  xsupconfig_parse_eap_peap.c \
			  xsupconfig_parse_eap_peap_phase2.c \
			  xsupconfig_parse_eap_ttls.c \
			  xsupconfig_parse_eap_ttls_phase2.c \
			  xsupconfig_parse_eap_ttls_pap.c \
			  xsupconfig_parse_eap_ttls_chap.c \
			  xsupconfig_parse_eap_ttls_mschap.c \
			  xsupconfig_parse_eap_ttls_mschapv2.c \
			  xsupconfig_parse_devices.c \
			  xsupconfig_parse_interface.c \
			  xsupconfig_devices.c \
			  xsupconfig_parse_trusted_servers.c \
			  xsupconfig_parse_trusted_server.c \
			  xsupconfig_parse_eap_tnc.c \
			  xsupconfig_parse_conn_ip.c \
			  lin_crypt.c xsupconfig_defaults.c \
			  xsupconfig_parse_profile_compliance.c \
			  xsupconfig_parse_plugins.c \
			  xsupconfig_parse_plugin.c
