noinst_LIBRARIES	   = libxsupconfwrite.a
libxsupconfwrite_a_SOURCES = xsupconfwrite_common.h xsupconfwrite_connection.h \
			     xsupconfwrite_connections.h \
			     xsupconfwrite_devices.h xsupconfwrite_eap_aka.h \
			     xsupconfwrite_eap_fast.h xsupconfwrite_eap.h \
			     xsupconfwrite_eap_mschapv2.h \
			     xsupconfwrite_eap_peap.h xsupconfwrite_eap_sim.h \
			     xsupconfwrite_eap_tls.h xsupconfwrite_eap_tnc.h \
			     xsupconfwrite_eap_ttls.h xsupconfwrite_globals.h \
			     xsupconfwrite_interface.h \
			     xsupconfwrite_managed_networks.h \
			     xsupconfwrite_profiles.h \
			     xsupconfwrite_pwd_only.h \
			     xsupconfwrite_trusted_server.h \
			     xsupconfwrite_trusted_servers.h \
			     xsupconfwrite.h \
			     \
			     xsupconfwrite.c xsupconfwrite_common.c \
			     xsupconfwrite_connection.c \
   			     xsupconfwrite_connections.c \
			     xsupconfwrite_devices.c \
			     xsupconfwrite_eap.c \
			     xsupconfwrite_eap_aka.c \
			     xsupconfwrite_eap_fast.c \
			     xsupconfwrite_eap_mschapv2.c \
			     xsupconfwrite_eap_peap.c \
 			     xsupconfwrite_eap_sim.c \
			     xsupconfwrite_eap_tls.c \
			     xsupconfwrite_eap_tnc.c \
			     xsupconfwrite_eap_ttls.c \
			     xsupconfwrite_globals.c \
			     xsupconfwrite_interface.c \
			     xsupconfwrite_profiles.c \
			     xsupconfwrite_pwd_only.c \
			     xsupconfwrite_trusted_server.c \
			     xsupconfwrite_trusted_servers.c \
			     xsupconfwrite_managed_networks.c

